Fixes for building with Java 8